fixed letter spacing

--- a/assets/css/yongseo_style.css
+++ b/assets/css/yongseo_style.css
@@ -78,7 +78,6 @@ html, body {
   font-size: 40px;
   text-align: center;
   margin-top: 10px;
-  letter-spacing: 0.03em;
 }
 
 #ld-photo-text {
